[package]
name = "atomicring"
version = "1.2.7"
authors = ["Crown Software GmbH"]
description = "AtomicRingBuffer is a constant-size almost lock-free concurrent ring buffer"
license = "MIT OR Apache-2.0"
repository = "https://github.com/eun-ice/atomicring"
edition = "2018"

[features]
index_access = []

default = ["index_access"]

[dependencies]
parking_lot = "0.11"

[dev-dependencies]
mpmc = "0.1.5"
crossbeam-queue = "0.3.0"


[profile.bench]
debug=true
