[package]
name = "atomicring"
version = "1.2.9"
authors = ["Crown Communications GmbH"]
description = "AtomicRingBuffer is a constant-size almost lock-free concurrent ring buffer"
license = "MIT OR Apache-2.0"
repository = "https://github.com/eun-ice/atomicring"
edition = "2021"

[features]
index_access = []

default = ["index_access"]

[dependencies]
parking_lot = "0.12.1"

[dev-dependencies]
mpmc = "0.1.5"
crossbeam-queue = "0.3.11"
serial_test = "3.0.0"


[profile.bench]
debug=true
